[tool.pdm]
version = { source = "file", path = "src/ai_cli/__init__.py" }

[project]
name = "py_ai_cli"
dynamic = ["version"]
description = "This CLI tool allows you to easily chat with chatGPT in the command line. You can chat with it, ask questions, and even translate text. It also"
authors = [
    {name = "Yufei Kang", email = "kou.uhi.x@gmail.com"},
]
dependencies = [
    "rich>=13.3.1",
    "openai>=0.27.0",
    "pysocks>=1.7.1",
    "pyperclip>=1.8.2",
    "EdgeGPT>=0.1.22.1",
    "tiktoken>=0.3.3",
    "BardApi>=0.1.38"
]
